@@ -17,21 +17,21 @@
  */
 
 /**
- * Natalie: Hair Salon Owner (NPC 1012103)
- * Victoria Road: Henesys Hair Salon (Map 100000104)
+ * Don Giovanni: Hair Salon Owner (NPC 1052100)
+ * Victoria Road: Kerning City Hair Salon (Map 103000005)
  *
- * Henesys hair changer - VIP coupons.
+ * Kerning City hair changer - VIP coupons.
  *
- * @author GoldenKevin (content from Vana r2111)
+ * @author GoldenKevin (content from KiniroMS r227)
  */
 
 function getStyleChoices(gender, currentHair) {
 	let color = currentHair % 10;
 	let styles;
 	if (gender == 0)
-		styles = [30030, 30020, 30000, 30310, 30330, 30060, 30150, 30410, 30210, 30140, 30120, 30200];
+		styles = [30030, 30020, 30000, 30130, 30350, 30190, 30110, 30180, 30050, 30040, 30160];
 	else if (gender == 1)
-		styles = [31050, 31040, 31000, 31150, 31310, 31300, 31160, 31100, 31410, 31030, 31080, 31070];
+		styles = [31050, 31040, 31000, 31060, 31090, 31020, 31130, 31120, 31140, 31330, 31010];
 	for (let i = 0; i < styles.length; i++)
 		styles[i] += color; //hair style choice colors are current hair color
 	return styles;
@@ -45,7 +45,7 @@ function getColorChoices(currentHair) {
 	return colors;
 }
 
-let selection = npc.askMenu("I'm the head of this hair salon Natalie. If you have #b#t5150001##k, #b#t5151001##k or #b#t5420002##k, allow me to take care of your hairdo. Please choose the one you want.\r\n#b"
+let selection = npc.askMenu("Hello! I'm Don Giovanni, head of the beauty salon! If you have either #b#t5150003##k, #b#t5151003##k or #b#t5420003##k, why don't you let me take care of the rest? Decide what you want to do with your hair...\r\n#b"
 		+ "#L0# Haircut(VIP coupon)#l\r\n"
 		+ "#L1# Dye your hair(VIP coupon)#l\r\n"
 		+ "#L2# Change Hairstyle (VIP Membership Coupon)#l");
@@ -56,22 +56,22 @@ let hairs;
 switch (selection) {
 	case 0:
 		hairs = getStyleChoices(npc.getPlayerGender(), npc.getPlayerHair());
-		selection = npc.askAvatar("I can totally change up your hairstyle and make it look so good. Why don't you change it up a bit? If you have #b#t5150001##k I'll change it for you. Choose the one to your liking~", hairs);
-		item = 5150001;
+		selection = npc.askAvatar("I can totally change up your hairstyle and make it look so good. Why don't you change it up a bit? If you have #b#t5150003##k I'll change it for you. Choose the one to your liking~", hairs);
+		item = 5150003;
 		take = true;
 		styleChange = true;
 		break;
 	case 1:
 		hairs = getColorChoices(npc.getPlayerHair());
-		selection = npc.askAvatar("I can totally change your haircolor and make it look so good. Why don't you change it up a bit? With #b#t5151001##k I'll change it for you. Choose the one to your liking.", hairs);
-		item = 5151001;
+		selection = npc.askAvatar("I can totally change your haircolor and make it look so good. Why don't you change it up a bit? With #b#t5151003##k I'll change it for you. Choose the one to your liking.", hairs);
+		item = 5151003;
 		take = true;
 		styleChange = false;
 		break;
 	case 2:
 		hairs = getStyleChoices(npc.getPlayerGender(), npc.getPlayerHair());
-		selection = npc.askAvatar("I can totally change up your hairstyle and make it look so good. Why don't you change it up a bit? If you have #b#t5420002##k I'll change it for you. With this coupon, you have the power to change your hairstyle to something totally new, as often as you want, for ONE MONTH! Now, please choose the hairstyle of your liking.", hairs);
-		item = 5420002;
+		selection = npc.askAvatar("I can totally change up your hairstyle and make it look so good. Why don't you change it up a bit? If you have #b#t5420003##k I'll change it for you. With this coupon, you have the power to change your hairstyle to something totally new, as often as you want, for ONE MONTH! Now, please choose the hairstyle of your liking.", hairs);
+		item = 5420003;
 		take = false;
 		styleChange = true;
 		break;
